- changed repository location type in GitRepository to URI - changed repository location type in LocalRepository to File